setup basic & common components

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -4,6 +4,7 @@
 
 @import 'components/alert';
 @import 'components/button';
+@import 'components/input';
 @import 'components/modal';
 @import 'components/navigation';
 @import 'components/pagination';
