--- a/src/assets/styles/components/_alert.scss
+++ b/src/assets/styles/components/_alert.scss
@@ -13,23 +13,23 @@
   width: 93%;
 
   &-success {
-    @include alert-variant('#0f5132', '#d1e7dd', '#badbcc');
+    @include alert-variant(#0f5132, #d1e7dd, #badbcc);
   }
 
   &-danger {
-    @include alert-variant('#842029', '#f8d7da', '#f5c2c7');
+    @include alert-variant(#842029, #f8d7da, #f5c2c7);
   }
 
   &-info {
-    @include alert-variant('#055160', '#cff4fc', '#b6effb');
+    @include alert-variant(#055160, #cff4fc, #b6effb);
   }
 
   &-warning {
-    @include alert-variant('#664d03', '#fff3cd', '#ffecb5');
+    @include alert-variant(#664d03, #fff3cd, #ffecb5);
   }
 
   &-secondary {
-    @include alert-variant('#41464b', '#e2e3e5', '#d3d6d8');
+    @include alert-variant(#41464b, #e2e3e5, #d3d6d8);
   }
 
   &-close {
