--- a/src/components/comments/comment-form/styles.scss
+++ b/src/components/comments/comment-form/styles.scss
@@ -1,5 +1,8 @@
+$border-color: #e2e8f0;
+
 .comment-form-container {
-  border: 1px solid #f7f7f7;
+  border: 1px solid $border-color;
+  border-radius: 5px;
   padding: 10px;
   width: 100%;
   position: relative;
