increase pagination per page length

--- a/src/components/comments/comment/styles.scss
+++ b/src/components/comments/comment/styles.scss
@@ -38,11 +38,11 @@
 }
 .replies {
   margin-left: 25px;
-  border-left: 1px solid #f7f6fa;
+  border-left: 1px solid #ecf0f1;
   padding-left: 10px;
 }
 .comment {
-  border: 1px solid #f5f5f5;
+  border: 1px solid #ecf0f1;
   padding: 10px;
 }
 
